[fixes #41856319] tag name should wrap on list view in the main list and in the right panel

--- a/app/assets/stylesheets/tags/_tag_list.scss
+++ b/app/assets/stylesheets/tags/_tag_list.scss
@@ -9,6 +9,7 @@
         div {
             margin: 5px;
             margin-left: 60px;
+            word-break: break-word;
         }
     }
 
