--- a/app/assets/stylesheets/tags/_tag_sidebar.scss
+++ b/app/assets/stylesheets/tags/_tag_sidebar.scss
@@ -2,5 +2,6 @@
     .tag_title {
         font-size: 18px;
         font-weight: $semibold;
+        word-break: break-word;
     }
 }
